<?xml version="1.0" encoding="utf-8"?>
<!--
  TimeLimit Copyright <C> 2019 - 2020 Jonas Lochmann
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation version 3 of the License.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="ifRoom"
        app:iconTint="?colorOnPrimarySurface"
        android:icon="@drawable/ic_baseline_directions_bike_24"
        android:title="@string/manage_child_tasks"
        android:id="@+id/menu_manage_child_tasks" />

    <item
        app:showAsAction="never"
        app:iconTint="?colorOnPrimarySurface"
        android:icon="@drawable/ic_phone_black_24dp"
        android:title="@string/contacts_title_long"
        android:id="@+id/menu_manage_child_phone" />

    <item
        app:showAsAction="never"
        app:iconTint="?colorOnPrimarySurface"
        android:icon="@drawable/ic_apps_white_24dp"
        android:title="@string/child_apps_title"
        android:id="@+id/menu_manage_child_apps" />

    <item
        app:showAsAction="never"
        app:iconTint="?colorOnPrimarySurface"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/usage_history_title"
        android:id="@+id/menu_manage_child_usage_history" />

    <item
        app:showAsAction="never"
        app:iconTint="?colorOnPrimarySurface"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/manage_child_tab_other"
        android:id="@+id/menu_manage_child_advanced" />

</menu>
