<!--
    Open TimeLimit Copyright <C> 2019 Jonas Lochmann

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation version 3 of the License.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="io.timelimit.android.ui.manage.category.blocked_times.BlockedTimeAreasHelpDialog">

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_help" />

    <TextView
        android:paddingTop="8dp"
        android:text="@string/blocked_time_areas_help_about"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="8dp"
        android:text="@string/blocked_time_areas_help_colors"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="8dp"
        android:text="@string/blocked_time_areas_help_structure"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="8dp"
        android:text="@string/blocked_time_areas_help_modify"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
